src/todos-webui/templates/networking/todos-webui-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todos
spec:
  hosts:
    - "*"
  gateways:
    - todos-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: todos-webui
            port:
              number: 8080
